infrastructure/base/cilium/local-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local-gateway
  namespace: gateway-system
  labels:
    type: local-gateway
  annotations:
    lbipam.cilium.io/ips-pool: "local-pool"
    lbipam.cilium.io/ips: "192.168.2.240"
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
